🎨 Docker Compose Version
Delete version in this file and add --build in the docker compose up

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,8 @@
-version: '3'
-
 services:
   mysql:
     build:
       context: ./resources/docker/mysql
-    image: mysql-server
+    image: mysql-server:latest
     container_name: project-db
     environment:
       MYSQL_DATABASE: apidb
@@ -17,7 +15,7 @@ services:
   php:
     build:
       context: ./resources/docker/php
-    image: php-server
+    image: php-server:latest
     container_name: project-api
     ports:
       - "80:80"
