--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       MYSQL_USER: admin
       MYSQL_PASSWORD: Adm1ns
       MYSQL_ROOT_PASSWORD: Adm1ns
+      MYSQL_ROOT_HOST: '%'
+    command: --default-authentication-plugin=mysql_native_password
     ports:
       - "3306:3306"
     restart: always
