:tada: Actualización de configuración y mejoras en el entorno de desarrollo
Se actualiza la versión de "coagus/php-api-builder" a ^1.0.0 en composer.json. Se modifican scripts de configuración para copiar archivos en lugar de moverlos en dev-setup.sh. Se mejoran los comandos en dev-up.sh para incluir la regeneración del autoloader y se actualizan las rutas de los servicios. Se ajusta la configuración de Docker y se añaden nuevas tablas y datos en script.sql. Se actualiza el README.md con información sobre el entorno de desarrollo y se añaden nuevos campos en las entidades de usuario.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,22 +2,20 @@ services:
   mysql:
     build:
       context: ./resources/docker/mysql
-    image: mysql-server:latest
+    image: mysql-server:project
     container_name: project-db
     environment:
       MYSQL_DATABASE: apidb
       MYSQL_USER: admin
       MYSQL_PASSWORD: Adm1ns
       MYSQL_ROOT_PASSWORD: Adm1ns
-      MYSQL_ROOT_HOST: '%'
-    command: --default-authentication-plugin=mysql_native_password
     ports:
       - "3306:3306"
     restart: always
   php:
     build:
       context: ./resources/docker/php
-    image: php-server:latest
+    image: php-server:project
     container_name: project-api
     ports:
       - "80:80"
