--- a/example.env
+++ b/example.env
@@ -1,5 +1,12 @@
-DB_HOST=mysql
+# Database
+DB_HOST=project-db
 DB_NAME=apidb
 DB_USERNAME=root
 DB_PASSWORD=Adm1ns
 DB_CHARSET=UTF8
+
+# JWT
+JWT_ENABLED=false
+JWT_KEY=Agu5t1n9876543210
+JWT_ALG=HS256
+JWT_EXP_MINS=15
